items: search item api
