# proto/openapi/docs.openapi.yaml
@@ -57,6 +57,30 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/google.rpc.Status'
+  /v1.Items/SearchItems:
+    post:
+      tags:
+        - Items
+      operationId: Items_SearchItems
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/v1.SearchItemsRequest'
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/v1.SearchItemsResponse'
+        default:
+          description: Default error response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/google.rpc.Status'
   /v1.Lists/CreateList:
     post:
       tags:
@@ -392,6 +416,24 @@ components:
           type: string
         name:
           type: string
+    v1.SearchItemsRequest:
+      type: object
+      properties:
+        kind:
+          enum:
+            - KIND_UNSPECIFIED
+            - KIND_GAME
+          type: string
+          format: enum
+        query:
+          type: string
+    v1.SearchItemsResponse:
+      type: object
+      properties:
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/v1.Item'
     v1.UpdateListRequest:
       type: object
       properties:
